<!-- res/layout/dialog_add_itinerary.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Destination" />

    <EditText
        android:id="@+id/destinationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Destination" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="From Date" />

    <EditText
        android:id="@+id/startDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Select Start Date"
        android:focusable="false"
        android:clickable="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="To Date" />

    <EditText
        android:id="@+id/endDateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Select End Date"
        android:focusable="false"
        android:clickable="true" />

</LinearLayout>
