<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item
       android:id="@+id/action_edit"
       android:title="Edit"/>

    <item
        android:id="@+id/action_delete"
        android:title="Delete"/>
</menu>