...
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/addItinerary"
            android:layout_width="55dp"
            android:layout_height="45dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/round_button_white"
            android:contentDescription="@string/create_itinerary"
...
